[gd_scene load_steps=13 format=3 uid="uid://dbnvcyifdltby"]

[ext_resource type="Script" path="res://Scripts/carousel1.gd" id="1_1ohtx"]
[ext_resource type="Texture2D" uid="uid://dsollllkaqrgk" path="res://Assets/Pictures/selectLeft_1.png" id="1_dmrmd"]
[ext_resource type="FontFile" uid="uid://bjm2ng4mj2k78" path="res://Assets/Fonts/Dongle-Bold.ttf" id="1_dnw0q"]
[ext_resource type="Texture2D" uid="uid://dg75hafuynrp2" path="res://Assets/Pictures/selectRight_1.png" id="2_kljr4"]
[ext_resource type="Texture2D" uid="uid://dh2yeas2jumon" path="res://Assets/Pictures/img1cat.png" id="4_bbqlf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8y63h"]
bg_color = Color(0.705882, 0.666667, 0.560784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.282353, 0.176471, 0.129412, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
expand_margin_top = 5.0

[sub_resource type="Theme" id="Theme_kto4q"]
Label/colors/font_color = Color(0.964706, 0.929412, 0.862745, 1)
Label/colors/font_outline_color = Color(0.380392, 0.329412, 0.145098, 1)
Label/constants/outline_size = 6
Label/font_sizes/font_size = 50
Label/fonts/font = ExtResource("1_dnw0q")
Label/styles/normal = SubResource("StyleBoxFlat_8y63h")

[sub_resource type="FontVariation" id="FontVariation_w6d3m"]
base_font = ExtResource("1_dnw0q")
spacing_glyph = 5
spacing_top = -2
spacing_bottom = -7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwhxq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_xwk0l"]
Button/styles/focus = SubResource("StyleBoxFlat_iwhxq")
Button/styles/hover = SubResource("StyleBoxFlat_iwhxq")
Button/styles/normal = SubResource("StyleBoxFlat_iwhxq")
Button/styles/pressed = SubResource("StyleBoxFlat_iwhxq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yd1uf"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_043vx"]
Button/styles/focus = SubResource("StyleBoxFlat_yd1uf")
Button/styles/hover = SubResource("StyleBoxFlat_yd1uf")
Button/styles/normal = SubResource("StyleBoxFlat_yd1uf")
Button/styles/pressed = SubResource("StyleBoxFlat_yd1uf")

[node name="CatLabel1" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1ohtx")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(266, 55)
anchors_preset = 0
offset_top = -1.0
offset_right = 266.0
offset_bottom = 54.0
theme = SubResource("Theme_kto4q")

[node name="DisplayedName" type="Label" parent="Control"]
custom_minimum_size = Vector2(490, 0)
layout_mode = 0
offset_left = -77.0
offset_top = -1.0
offset_right = 413.0
offset_bottom = 73.0
theme_override_fonts/font = SubResource("FontVariation_w6d3m")
text = "CAT TYPE"
horizontal_alignment = 1

[node name="left" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = -64.0
offset_top = 6.0
offset_right = -24.0
offset_bottom = 46.0

[node name="Sprite2D" type="Sprite2D" parent="left"]
position = Vector2(28.9038, 25.5)
scale = Vector2(0.826923, 0.826923)
texture = ExtResource("1_dmrmd")

[node name="Button" type="Button" parent="left"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 51.0
offset_bottom = 47.0
theme = SubResource("Theme_xwk0l")

[node name="right" type="Control" parent="."]
anchors_preset = 0
offset_left = 343.0
offset_top = 8.0
offset_right = 383.0
offset_bottom = 48.0

[node name="Sprite2D" type="Sprite2D" parent="right"]
position = Vector2(27, 24)
scale = Vector2(0.884615, 0.884615)
texture = ExtResource("2_kljr4")

[node name="Button" type="Button" parent="right"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 50.0
offset_bottom = 46.0
theme = SubResource("Theme_043vx")

[node name="DisplayedCat" type="Sprite2D" parent="."]
position = Vector2(155, 220)
scale = Vector2(0.082428, 0.082428)
texture = ExtResource("4_bbqlf")

[connection signal="mouse_entered" from="left/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="left/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="left/Button" to="." method="_on_button_pressed_lef"]
[connection signal="mouse_entered" from="right/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="right/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="right/Button" to="." method="_on_button_pressed_right"]
